[refactor]별점 입력 시 place에 들어가도록 수정